[gd_scene load_steps=9 format=3 uid="uid://c6rwtojvbo00w"]

[ext_resource type="Script" path="res://PowerUps/Scripts/RocketShooterMissile.gd" id="1_c80sp"]
[ext_resource type="Texture2D" uid="uid://n6qh0w27doou" path="res://0-Art/Kenney_space-shooter-extension/PNG/Sprites/Missiles/spaceMissiles_018.png" id="2_05aqy"]
[ext_resource type="Texture2D" uid="uid://dw7k4g2m5v2i0" path="res://0-Art/Kenney-Space-Shooter/PNG/Effects/fire16.png" id="3_gtpao"]
[ext_resource type="Texture2D" uid="uid://buucuq2count4" path="res://0-Art/Kenney-Space-Shooter/PNG/Effects/fire17.png" id="4_lp431"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkuqa"]
size = Vector2(31, 12)

[sub_resource type="Animation" id="Animation_0xd7y"]
resource_name = "Idle"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jet:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_gtpao"), ExtResource("4_lp431")]
}

[sub_resource type="Animation" id="Animation_gako3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jet:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_gtpao")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5rq1b"]
_data = {
"Idle": SubResource("Animation_0xd7y"),
"RESET": SubResource("Animation_gako3")
}

[node name="RocketShooterMissile" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_c80sp")

[node name="Rocket" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_05aqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_wkuqa")

[node name="Jet" type="Sprite2D" parent="."]
position = Vector2(-30, 0)
rotation = 1.5708
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_gtpao")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5rq1b")
}
autoplay = "Idle"

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
